[package]
name = "falls_no_more"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
pixels = "0.13.0"
winit = { version = "0.29.10", features = ["rwh_05"] }
num-traits = "0.2.18"
